p2/confs/app1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-one
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-one
  template:
    metadata:
      labels:
        app: app-one
    spec:
      containers:
      - name: app-one
        image: nginxdemos/hello:plain-text # 간단한 텍스트를 보여주는 예제 이미지
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: app-one-svc
spec:
  selector:
    app: app-one
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
